# python-datemath

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rd  RELEASE.md  build.sh  datemath.py  requirements-2.txt  requirements-3.txt  requirements.txt  setup.cfg  setup.py  tests-3.py  tests-legacy.py  tests.py  verify.py
.github/workflows/: deploy_packages.yaml  release.yaml  tests.yaml
datemath/: __init__.py  _version.py  helpers.py  py.typed
