[metadata]
name = python-datemath 
description = "A python module to emulate the date math used in SOLR and Elasticsearch"
long_description = file: README.md  
long_description_content_type = text/markdown
author = Nick MacCarthy
author_email = nickmaccarthy@gmail.com
license = Apache-2.0
classifiers = 
        Development Status :: 5 - Production/Stable        
        Intended Audience :: Developers
        Topic :: Software Development :: Build Tools
        License :: Apache-2.0
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11


[bdist_wheel]
universal=1
