[metadata]
name = python-datemath 
description = "A python module to emulate the date math used in SOLR and Elasticsearch"
keywords = date math datemath elaticsearch solr
long_description = file: README.md  
long_description_content_type = text/markdown
author = Nick MacCarthy
author_email = nickmaccarthy@gmail.com
license = Apache-2.0
classifiers = 
        Development Status :: 5 - Production/Stable        
        Intended Audience :: Developers
        Topic :: Software Development :: Build Tools
        License :: OSI Approved :: Apache Software License
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        Operating System :: OS Independent

[options]
python_requires = >=3.8
install_requires = 
    arrow >= 1.0.3

[bdist_wheel]
universal=1
